--- a/part5/bloglist-frontend/src/main.css
+++ b/part5/bloglist-frontend/src/main.css
@@ -1,3 +1,10 @@
+.blog {
+  border-style: solid;
+  border-width: 1px;
+  margin-bottom: 5px;
+  padding: 5px;
+}
+
 .error {
   background: lightgrey;
   border-radius: 5px;
