--- a/part7/redux-bloglist/frontend/src/main.css
+++ b/part7/redux-bloglist/frontend/src/main.css
@@ -1,26 +1,8 @@
-.blog {
-  border-style: solid;
-  border-width: 1px;
-  margin-bottom: 5px;
-  padding: 5px;
-}
-
-.error {
-  background: lightgrey;
-  border-radius: 5px;
-  border-style: solid;
-  color: red;
-  font-size: 20px;
-  margin-bottom: 10px;
-  padding: 10px;
-}
-
-.notification {
-  background: lightgrey;
-  border-radius: 5px;
-  border-style: solid;
-  color: green;
-  font-size: 20px;
-  margin-bottom: 10px;
-  padding: 10px;
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
